--- a/docs/team/brebeek.adoc
+++ b/docs/team/brebeek.adoc
@@ -96,6 +96,7 @@ careful tweaks to existing structures.
 |===
 
 include::../UserGuide.adoc[tag=sort]
+
 include::../UserGuide.adoc[tag=undo-redo]
 
 == Contributions to the Developer Guide
@@ -105,6 +106,9 @@ include::../UserGuide.adoc[tag=undo-redo]
 |===
 
 include::../DeveloperGuide.adoc[tag=sort]
+
 include::../DeveloperGuide.adoc[tag=undoredo-uc]
+
 include::../DeveloperGuide.adoc[tag=glossary]
 
+include::../DeveloperGuide.adoc[tag=yuchen-test]
